@@ -1,20 +1,5 @@
 package org.asamk.signal.manager.storage.sessions;
 
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-
-import java.sql.Connection;
-import java.sql.ResultSet;
-import java.sql.SQLException;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Set;
-import java.util.stream.Collectors;
-
 import org.asamk.signal.manager.api.Pair;
 import org.asamk.signal.manager.storage.Database;
 import org.asamk.signal.manager.storage.Utils;
@@ -31,6 +16,18 @@ import org.whispersystems.signalservice.api.push.ServiceId;
 import org.whispersystems.signalservice.api.push.ServiceIdType;
 import org.whispersystems.signalservice.api.util.UuidUtil;
 
+import java.sql.Connection;
+import java.sql.ResultSet;
+import java.sql.SQLException;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.stream.Collectors;
+
 public class SessionStore implements SignalServiceSessionStore {
 
     private static final String TABLE_SESSION = "session";
@@ -44,14 +41,16 @@ public class SessionStore implements SignalServiceSessionStore {
     public static void createSql(Connection connection) throws SQLException {
         // When modifying the CREATE statement here, also add a migration in AccountDatabase.java
         try (final var statement = connection.createStatement()) {
-            statement.executeUpdate("                                    CREATE TABLE session (\n"
-                    + "                                      _id INTEGER PRIMARY KEY,\n"
-                    + "                                      account_id_type INTEGER NOT NULL,\n"
-                    + "                                      uuid BLOB NOT NULL,\n"
-                    + "                                      device_id INTEGER NOT NULL,\n"
-                    + "                                      record BLOB NOT NULL,\n"
-                    + "                                      UNIQUE(account_id_type, uuid, device_id)\n"
-                    + "                                    ) STRICT;\n" + "");
+            statement.executeUpdate("""
+                                    CREATE TABLE session (
+                                      _id INTEGER PRIMARY KEY,
+                                      account_id_type INTEGER NOT NULL,
+                                      uuid BLOB NOT NULL,
+                                      device_id INTEGER NOT NULL,
+                                      record BLOB NOT NULL,
+                                      UNIQUE(account_id_type, uuid, device_id)
+                                    ) STRICT;
+                                    """);
         }
     }
 
@@ -72,9 +71,8 @@ public class SessionStore implements SignalServiceSessionStore {
     }
 
     @Override
-    public List<SessionRecord> loadExistingSessions(final List<SignalProtocolAddress> addresses)
-            throws NoSessionException {
-        final var keys = addresses.stream().map(this::getKey).collect(Collectors.toList());
+    public List<SessionRecord> loadExistingSessions(final List<SignalProtocolAddress> addresses) throws NoSessionException {
+        final var keys = addresses.stream().map(this::getKey).toList();
 
         try (final var connection = database.getConnection()) {
             final var sessions = new ArrayList<SessionRecord>();
@@ -86,8 +84,11 @@ public class SessionStore implements SignalServiceSessionStore {
             }
 
             if (sessions.size() != addresses.size()) {
-                String message = "Mismatch! Asked for " + addresses.size() + " sessions, but only found "
-                        + sessions.size() + "!";
+                String message = "Mismatch! Asked for "
+                        + addresses.size()
+                        + " sessions, but only found "
+                        + sessions.size()
+                        + "!";
                 logger.warn(message);
                 throw new NoSessionException(message);
             }
@@ -102,16 +103,18 @@ public class SessionStore implements SignalServiceSessionStore {
     public List<Integer> getSubDeviceSessions(String name) {
         final var serviceId = ServiceId.parseOrThrow(name);
         // get all sessions for recipient except primary device session
-        final var sql = String.format(
-                "                SELECT s.device_id\n" + "                FROM %s AS s\n"
-                        + "                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id != 1\n",
-                TABLE_SESSION);
+        final var sql = (
+                """
+                SELECT s.device_id
+                FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id != 1
+                """
+        ).formatted(TABLE_SESSION);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setInt(1, accountIdType);
                 statement.setBytes(2, serviceId.toByteArray());
-                return Utils.executeQueryForStream(statement, res -> res.getInt("device_id"))
-                        .collect(Collectors.toList());
+                return Utils.executeQueryForStream(statement, res -> res.getInt("device_id")).toList();
             }
         } catch (SQLException e) {
             throw new RuntimeException("Failed read from session store", e);
@@ -203,21 +206,27 @@ public class SessionStore implements SignalServiceSessionStore {
 
     @Override
     public Set<SignalProtocolAddress> getAllAddressesWithActiveSessions(final List<String> addressNames) {
-        final var serviceIdsCommaSeparated = addressNames.stream().map(ServiceId::parseOrThrow)
-                .map(ServiceId::toByteArray).map(uuid -> "x'" + Hex.toStringCondensed(uuid) + "'")
+        final var serviceIdsCommaSeparated = addressNames.stream()
+                .map(ServiceId::parseOrThrow)
+                .map(ServiceId::toByteArray)
+                .map(uuid -> "x'" + Hex.toStringCondensed(uuid) + "'")
                 .collect(Collectors.joining(","));
-        final var sql = String.format(
-                "                SELECT s.uuid, s.device_id, s.record\n" + "                FROM %s AS s\n"
-                        + "                WHERE s.account_id_type = ? AND s.uuid IN (%s)\n",
-                TABLE_SESSION, serviceIdsCommaSeparated);
+        final var sql = (
+                """
+                SELECT s.uuid, s.device_id, s.record
+                FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid IN (%s)
+                """
+        ).formatted(TABLE_SESSION, serviceIdsCommaSeparated);
         try (final var connection = database.getConnection()) {
             try (final var statement = connection.prepareStatement(sql)) {
                 statement.setInt(1, accountIdType);
-                return Utils
-                        .executeQueryForStream(statement,
+                return Utils.executeQueryForStream(statement,
                                 res -> new Pair<>(getKeyFromResultSet(res), getSessionRecordFromResultSet(res)))
-                        .filter(pair -> isActive(pair.second())).map(p -> p.first())
-                        .map(key -> key.serviceId.toProtocolAddress(key.deviceId)).collect(Collectors.toSet());
+                        .filter(pair -> isActive(pair.second()))
+                        .map(Pair::first)
+                        .map(key -> key.serviceId().toProtocolAddress(key.deviceId()))
+                        .collect(Collectors.toSet());
             }
         } catch (SQLException e) {
             throw new RuntimeException("Failed read from session store", e);
@@ -225,8 +234,13 @@ public class SessionStore implements SignalServiceSessionStore {
     }
 
     public void archiveAllSessions() {
-        final var sql = String.format("                SELECT s.uuid, s.device_id, s.record\n"
-                + "                FROM %s AS s\n" + "                WHERE s.account_id_type = ?\n", TABLE_SESSION);
+        final var sql = (
+                """
+                SELECT s.uuid, s.device_id, s.record
+                FROM %s AS s
+                WHERE s.account_id_type = ?
+                """
+        ).formatted(TABLE_SESSION);
         try (final var connection = database.getConnection()) {
             connection.setAutoCommit(false);
             final List<Pair<Key, SessionRecord>> records;
@@ -235,7 +249,7 @@ public class SessionStore implements SignalServiceSessionStore {
                 records = Utils.executeQueryForStream(statement,
                                 res -> new Pair<>(getKeyFromResultSet(res), getSessionRecordFromResultSet(res)))
                         .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+                        .toList();
             }
             for (final var record : records) {
                 record.second().archiveCurrentState();
@@ -248,9 +262,13 @@ public class SessionStore implements SignalServiceSessionStore {
     }
 
     public void archiveSessions(final ServiceId serviceId) {
-        final var sql = String.format("                SELECT s.uuid, s.device_id, s.record\n"
-                + "                FROM %s AS s\n" + "                WHERE s.account_id_type = ? AND s.uuid = ?\n",
-                TABLE_SESSION);
+        final var sql = (
+                """
+                SELECT s.uuid, s.device_id, s.record
+                FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid = ?
+                """
+        ).formatted(TABLE_SESSION);
         try (final var connection = database.getConnection()) {
             connection.setAutoCommit(false);
             final List<Pair<Key, SessionRecord>> records;
@@ -260,7 +278,7 @@ public class SessionStore implements SignalServiceSessionStore {
                 records = Utils.executeQueryForStream(statement,
                                 res -> new Pair<>(getKeyFromResultSet(res), getSessionRecordFromResultSet(res)))
                         .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+                        .toList();
             }
             for (final var record : records) {
                 record.second().archiveCurrentState();
@@ -299,14 +317,17 @@ public class SessionStore implements SignalServiceSessionStore {
                 return session;
             }
         }
-        final var sql = String.format(
-                "                SELECT s.record\n" + "                FROM %s AS s\n"
-                        + "                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id = ?\n",
-                TABLE_SESSION);
+        final var sql = (
+                """
+                SELECT s.record
+                FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id = ?
+                """
+        ).formatted(TABLE_SESSION);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setInt(1, accountIdType);
-            statement.setBytes(2, key.serviceId.toByteArray());
-            statement.setInt(3, key.deviceId);
+            statement.setBytes(2, key.serviceId().toByteArray());
+            statement.setInt(3, key.deviceId());
             return Utils.executeQueryForOptional(statement, this::getSessionRecordFromResultSet).orElse(null);
         }
     }
@@ -327,19 +348,21 @@ public class SessionStore implements SignalServiceSessionStore {
         }
     }
 
-    private void storeSession(final Connection connection, final Key key, final SessionRecord session)
-            throws SQLException {
+    private void storeSession(
+            final Connection connection, final Key key, final SessionRecord session
+    ) throws SQLException {
         synchronized (cachedSessions) {
             cachedSessions.put(key, session);
         }
 
-        final var sql = String
-                .format("                INSERT OR REPLACE INTO %s (account_id_type, uuid, device_id, record)\n"
-                        + "                VALUES (?, ?, ?, ?)\n", TABLE_SESSION);
+        final var sql = """
+                        INSERT OR REPLACE INTO %s (account_id_type, uuid, device_id, record)
+                        VALUES (?, ?, ?, ?)
+                        """.formatted(TABLE_SESSION);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setInt(1, accountIdType);
-            statement.setBytes(2, key.serviceId.toByteArray());
-            statement.setInt(3, key.deviceId);
+            statement.setBytes(2, key.serviceId().toByteArray());
+            statement.setInt(3, key.deviceId());
             statement.setBytes(4, session.serialize());
             statement.executeUpdate();
         }
@@ -350,8 +373,12 @@ public class SessionStore implements SignalServiceSessionStore {
             cachedSessions.clear();
         }
 
-        final var sql = String.format("                DELETE FROM %s AS s\n"
-                + "                WHERE s.account_id_type = ? AND s.uuid = ?\n", TABLE_SESSION);
+        final var sql = (
+                """
+                DELETE FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid = ?
+                """
+        ).formatted(TABLE_SESSION);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setInt(1, accountIdType);
             statement.setBytes(2, serviceId.toByteArray());
@@ -364,40 +391,25 @@ public class SessionStore implements SignalServiceSessionStore {
             cachedSessions.remove(key);
         }
 
-        final var sql = String.format(
-                "                DELETE FROM %s AS s\n"
-                        + "                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id = ?",
-                TABLE_SESSION);
+        final var sql = (
+                """
+                DELETE FROM %s AS s
+                WHERE s.account_id_type = ? AND s.uuid = ? AND s.device_id = ?
+                """
+        ).formatted(TABLE_SESSION);
         try (final var statement = connection.prepareStatement(sql)) {
             statement.setInt(1, accountIdType);
-            statement.setBytes(2, key.serviceId.toByteArray());
-            statement.setInt(3, key.deviceId);
+            statement.setBytes(2, key.serviceId().toByteArray());
+            statement.setInt(3, key.deviceId());
             statement.executeUpdate();
         }
     }
 
     private static boolean isActive(SessionRecord record) {
-        return record != null && record.hasSenderChain()
+        return record != null
+                && record.hasSenderChain()
                 && record.getSessionVersion() == CiphertextMessage.CURRENT_VERSION;
     }
 
-    static class Key {
-        private final ServiceId serviceId;
-        private final int deviceId;
-
-        public Key(@JsonProperty("serviceId") ServiceId serviceId, @JsonProperty("deviceId") int deviceId) {
-            super();
-            this.serviceId = serviceId;
-            this.deviceId = deviceId;
-        }
-
-        public ServiceId serviceId() {
-            return serviceId;
-        }
-
-        public int deviceId() {
-            return deviceId;
-        }
-
-    }
+    record Key(ServiceId serviceId, int deviceId) {}
 }
